Removed Map.of, Set.of, List.of and var references. Replaced byte[] reading from input stream. Copied Pattern `asMatchPredicate` to utility class.